# loadlens-forecasting-service

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: streamlit_app.py
docs/: BACKTEST.md  DEPLOYMENT.md
reports/: README.md  rolling_origin_folds.csv  rolling_origin_summary.json
scripts/: backtest.py  download_data.py  train.py
src/loadlens/: __init__.py  api.py  backtest.py  data.py  features.py  model.py
tests/: test_api.py  test_backtest.py  test_features.py  test_model.py
