[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loadlens-forecasting-service"
version = "1.0.0"
description = "Reproducible short-horizon electricity load forecasting service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pydantic>=2.5",
  "scikit-learn>=1.3",
  "streamlit>=1.36",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[project.scripts]
loadlens-download = "loadlens.data:main"
loadlens-train = "loadlens.model:main"

[tool.setuptools.packages.find]
where = ["src"]
